CompilationManager: constant for "jsfc" + final + for loop + isEmpty + typo + instanceof var
Signed-off-by: pizzi80 <paolo@given2.com>